FINISH SplashScreen and ADD data, SharedPreferencesManager package and ADD LoginScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="basket_str">BASKET</string>
     <string name="orders_str">ORDERS</string>
     <string name="logout_str">LOGOUT</string>
+    <string name="clever_mind_str">2023.Clever Mind POB</string>
+    <string name="healthy_mall_in_your_hand">Healthy Mall in Your Hand</string>
+    <string name="the">THE</string>
 </resources>
