--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,14 @@
     <string name="logout_str">LOGOUT</string>
     <string name="save_discount_str">SAVE 20%</string>
     <string name="our_fruits_str">OUR FRUITS</string>
+    <string name="summer_fruits_str">SUMMER FRUITS</string>
+    <string name="new_fruits_str">NEW FRUITS</string>
+    <string name="winter_fruits_str">WINTER FRUITS</string>
+    <string name="green_fruits_str">GREEN FRUITS</string>
+    <string name="total_str">"Total: "</string>
+    <string name="aleady_zero_str">The number you ordered is already zero</string>
 
-    <string-array name="fruitNames">
+    <string-array name="fruitTypeNames">
 
         <item name="0"> SUMMER FRUITS </item>
         <item name="1"> NEW FRUITS </item>
@@ -16,4 +22,32 @@
         <item name="3"> WINTER FRUITS </item>
 
     </string-array>
+
+    <string-array name="fruitNames">
+
+        <item name="0"> Apple </item>
+        <item name="1"> Orange </item>
+        <item name="2"> Bananas </item>
+        <item name="3"> Strawberry </item>
+        <item name=""> KIWI </item>
+        <item name=""> MELON </item>
+        <item name=""> PINEAPPLE </item>
+        <item name=""> LEMON </item>
+
+    </string-array>
+
+    <string-array name="fruitPrices">
+
+        <item name="0"> 2 </item>
+        <item name="1"> 3 </item>
+        <item name="2"> 1.5 </item>
+        <item name="3"> 3 </item>
+        <item name=""> 5 </item>
+        <item name=""> 1 </item>
+        <item name=""> 2.5 </item>
+        <item name=""> 3.5 </item>
+
+    </string-array>
+
+
 </resources>
