--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
     <string name="title_of_forget_dialog_str">FORGET PASSWORD</string>
     <string name="emailNotFound_str">This email does not exist</string>
     <string name="check_your_email">Check Your Email To Reset Password</string>
+    <string name="sign_up_word_str">SIGN UP</string>
+    <string name="full_name_hint_str">FULL NAME</string>
+    <string name="phone_hint_str">PHONE NUMBER</string>
+    <string name="emailFormatErrorMessage_str">Wrong email format</string>
+    <string name="phoneLengthErrorMessage_str">Phone number length should be 10</string>
+    <string name="invalidPhone_str">Phone number(must be begin 077 or 078 or 079 )</string>
+    <string name="accountExist_str">This account already exists :(</string>
+    <string name="cash_str">CASH</string>
+    <string name="visa_str">VISA</string>
+    <string name="choose_payment">Please choose the payment method.</string>
 </resources>
