--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="order_now_str">ORDER NOW</string>
     <string name="canceled_str">Canceled</string>
     <string name="empty_address_str">You have to fill in your address</string>
+    <string name="add_some_fruit_str">You have to add some fruits first</string>
 
     <string-array name="fruitTypeNames">
 
